--- a/appllication.properties
+++ b/appllication.properties
@@ -3,3 +3,6 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.cloud.discovery.enabled=true
 spring.cloud.config.enabled=false
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
+management.endpoints.web.exposure.include=*
